fix overflowing text

--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,9 @@ li {
   color: #721121;
 }
 
-/* ------------------------------
-  --------- Layout ----------------
-  ------------------------------- */
+/* --------------------------------------------
+  ----------- Layout and styling --------------
+  --------------------------------------------- */
 body {
   border: 5px solid #721121;
 }
@@ -274,9 +274,9 @@ ul {
   padding: 0.5em 0;
 }
 
-/* ------------------------------
+/* ---------------------------------------------
   --------- Slideshow container ----------------
-  ------------------------------- */
+  ---------------------------------------------- */
 
 .slideshow-container {
   max-width: 1000px;
@@ -382,9 +382,9 @@ ul {
   }
 }
 
-/* ------------------------------
+/* ---------------------------------------
   --------- Media Queries ----------------
-  ------------------------------- */
+  ---------------------------------------- */
 
 @media (min-width: 700px) {
   .nav-links {
